--- a/package.json
+++ b/package.json
@@ -22,7 +22,10 @@
   "homepage": "https://github.com/JamieKook/EmployeeTracker#readme",
   "dependencies": {
     "console.table": "^0.10.0",
+    "e": "0.0.4",
     "inquirer": "^7.0.3",
-    "mysql": "^2.18.0"
+    "mysql": "^2.18.0",
+    "mysql-promisify": "^1.0.1",
+    "util": "^0.12.1"
   }
 }
